<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:padding="8dp">

    <!-- Header chứa tên trang và icon thông báo -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:padding="8dp">

        <!-- Tên trang Home -->
        <TextView
            android:id="@+id/headerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000000" />

        <!-- Icon thông báo ở bên phải -->

        <ImageView
            android:id="@+id/cartIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cart"
            android:contentDescription="@string/cart_icon"
            android:layout_marginEnd="10dp" />
        <ImageView
            android:id="@+id/chatIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chat"
            android:contentDescription="@string/chat_icon"
            android:layout_marginEnd="10dp" />
        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_noti"
            android:contentDescription="@string/notification_icon"
            android:layout_marginEnd="8dp" />

    </LinearLayout>

    <!-- Container cho Sort và Filter Buttons -->
    <LinearLayout
        android:id="@+id/filter_sort_buttons"
        android:layout_width="188dp"
        android:layout_height="63dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <!-- Nút Sort -->
        <Button
            android:id="@+id/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:background="@color/black"
            android:textColor="@color/white"
            android:elevation="10dp"/>

        <!-- Nút Filter -->
        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/filter" />
    </LinearLayout>

    <!-- RecyclerView chứa danh sách các card -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/filter_sort_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
