<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Toolbar với nút Back -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp"
        app:titleTextColor="#ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Hình ảnh sản phẩm -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tên sản phẩm -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp" />

    <!-- Mô tả sản phẩm -->
    <TextView
        android:id="@+id/product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_description"
        android:textSize="16sp"
        android:textColor="#333333"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp" />

    <!-- Thông số kỹ thuật -->
    <TextView
        android:id="@+id/product_technical_specifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/technical_specifications"
        android:textSize="16sp"
        android:textColor="#333333"
        app:layout_constraintTop_toBottomOf="@id/product_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp" />

    <!-- Danh mục sản phẩm -->
    <TextView
        android:id="@+id/product_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="16sp"
        android:textColor="#FF5722"
        app:layout_constraintTop_toBottomOf="@id/product_technical_specifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp" />


    <LinearLayout
        android:id="@+id/button_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/product_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/add_cart_bg"
            android:drawableStart="@drawable/ic_cart"
            android:drawablePadding="8dp"
            android:elevation="5dp"
            android:padding="12dp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
